fix: add horizontal scrollbar to code block

--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -23,6 +23,36 @@ body {
   color: var(--text-color);
 }
 
+.pre-highlight {
+  position: relative;
+  overflow: auto;
+  -webkit-overflow-scrolling: touch;
+}
+
+pre {
+  overflow: auto;
+  padding: 2em 1em;
+  &::before {
+    background: white;
+    border-radius: 0 0 0.25rem 0.25rem;
+    font-size: 14px;
+    letter-spacing: 0.025rem;
+    padding: 0 0.5rem;
+    position: absolute;
+    right: 1rem;
+    text-align: right;
+    text-transform: uppercase;
+    top: 0.8rem;
+    font-weight: 600;
+    line-height: 1.7;
+  }
+  &.language-javascript::before {
+    content: "js";
+    background: #f7df1e;
+    color: black;
+  }
+}
+
 .container {
   min-height: 100vh;
   display: flex;
